--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app">
 <head>
 	<meta charset="utf-8">
 	<title>Hello World</title>
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/css/style.css" rel="stylesheet">
   <script src="./assets/js/jquery-1.8.3.min.js"></script>
+  <script src="./assets/js/angular.min.js"></script>
+  <script src="./assets/js/angular-route.min.js"></script>
 </head>
 <body>
 	<link href="./assets/css/fontawesome.css" media="screen" rel="stylesheet">
-	<nav class="navbar navbar-default navbar-fixed-top topbar">
+	<nav class="navbar navbar-default navbar-fixed-top topbar" ng-controller="navController">
 		<div class="container-fluid">
 			<div class="navbar-header">
 				<a class="navbar-brand no-drag" href="#">Electron</a>
 			</div>
 			<div class="navbar-collapse collapse" id="navbar-collapse-main">
 				<ul class="nav navbar-nav navbar-right no-drag">
-					<li><button id="close-window" class="navbar-btn"><i class="fa fa-close"></i></button></li>
+					<li><button class="navbar-btn"><i class="fa fa-close" ng-click="close()"></i></button></li>
 				</ul>
 			</div>
 		</div>
