--- a/index.html
+++ b/index.html
@@ -27,228 +27,22 @@
 		<aside class="sidebar">
 			<ul class="sidebar-nav">
 				<li class="active">
-					<a data-toggle="tab" href="#dashboard"><i class="fa fa-dashboard"></i></a>
+					<a data-toggle="tab" data-target='dashboard' href="#!"><i class="fa fa-dashboard"></i></a>
 				</li>
 				<li>
-					<a data-toggle="tab" href="#configuration"><i class="fa fa-cogs"></i></a>
+					<a data-toggle="tab" data-target='pos' href="#!pos"><i class="fa fa-shopping-cart"></i></a>
 				</li>
 				<li>
-					<a data-toggle="tab" href="#users"><i class="fa fa-users"></i></a>
+					<a data-toggle="tab" data-target='inventory' href="#!inventory"><i class="fa fa-cube"></i></a>
 				</li>
 				<li>
-					<a data-toggle="tab" href="#mail"><i class="fa fa-envelope"></i></a>
+					<a data-toggle="tab" data-target='feedback' href="#!feedback"><i class="fa fa-envelope"></i></a>
 				</li>
 			</ul>
 		</aside>
 		<section class="main">
 			<section class="tab-content">
-				<section class="tab-pane active fade in content" id="dashboard">
-					<div class="row">
-						<div class="col-xs-6 col-sm-3">
-							<div class="panel panel-primary">
-								<div class="panel-body">
-									<br>
-									<br>
-									<br>
-									<br>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-6 col-sm-3">
-							<div class="panel panel-success">
-								<div class="panel-body">
-									<br>
-									<br>
-									<br>
-									<br>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-6 col-sm-3">
-							<div class="panel panel-danger">
-								<div class="panel-body">
-									<br>
-									<br>
-									<br>
-									<br>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-6 col-sm-3">
-							<div class="panel panel-warning">
-								<div class="panel-body">
-									<br>
-									<br>
-									<br>
-									<br>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-12 col-sm-9">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									Test
-								</div>
-								<div class="panel-body">
-									<br>
-									<br>
-									<br>
-									<br>
-									<br>
-									<br>
-									<br>
-									<br>
-									<br>
-									<br>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-12 col-sm-3">
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									Test
-								</div>
-								<div class="panel-body">
-                  <br>
-                  <br>
-                  <br>
-									<br>
-								</div>
-							</div>
-							<div class="panel panel-default">
-								<div class="panel-heading">
-									Test
-								</div>
-								<div class="panel-body">
-                  <br>
-                  <br>
-                  <br>
-								</div>
-							</div>
-						</div>
-					</div>
-				</section>
-				<section class="tab-pane fade" id="configuration">
-					<nav class="subbar">
-						<ul class="nav nav-tabs">
-							<li class="active">
-								<a data-toggle="tab" href="#access"><i class="fa fa-code"></i> <span>System</span></a>
-							</li>
-							<li>
-								<a data-toggle="tab" href="#roles"><i class="fa fa-user"></i> <span>Roles</span></a>
-							</li>
-						</ul>
-					</nav>
-					<section class="tab-content content">
-						<section class="tab-pane active fade in" id="access">
-							<div class="row">
-								<div class="col-xs-12">
-									<div class="panel panel-default">
-										<div class="panel-heading">
-											Something
-										</div>
-										<div class="panel-body">
-											<br>
-											<br>
-											<br>
-											<br>
-										</div>
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-4">
-									<div class="panel panel-default">
-										<div class="panel-heading">
-											Something
-										</div>
-										<div class="panel-body">
-											<br>
-											<br>
-											<br>
-											<br>
-										</div>
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-4">
-									<div class="panel panel-default">
-										<div class="panel-heading">
-											Something
-										</div>
-										<div class="panel-body">
-											<br>
-											<br>
-											<br>
-											<br>
-										</div>
-									</div>
-								</div>
-								<div class="col-xs-12 col-sm-4">
-									<div class="panel panel-default">
-										<div class="panel-heading">
-											Something
-										</div>
-										<div class="panel-body">
-											<br>
-											<br>
-											<br>
-											<br>
-										</div>
-									</div>
-								</div>
-							</div>
-						</section>
-						<section class="tab-pane fade" id="roles">
-							<div class="row">
-								<div class="col-xs-12 col-sm-8 col-md-9">
-									<div class="panel panel-default">
-										<div class="panel-heading">
-											Something
-										</div>
-										<div class="panel-body">
-											<br>
-											<br>
-											<br>
-											<br>
-											<br>
-											<br>
-											<br>
-											<br>
-											<br>
-											<br>
-											<br>
-											<br>
-											<br>
-											<br>
-										</div>
-									</div>
-								</div>
-								<div class="hidden-xs col-sm-4 col-md-3">
-									<div class="panel panel-default">
-										<div class="panel-heading">
-											Something
-										</div>
-										<div class="panel-body">
-											<br>
-											<br>
-											<br>
-										</div>
-									</div>
-									<div class="panel panel-default">
-										<div class="panel-heading">
-											Something
-										</div>
-										<div class="panel-body">
-											<br>
-											<br>
-											<br>
-										</div>
-									</div>
-								</div>
-							</div>
-						</section>
-					</section>
-					<section class="tab-pane fade" id="users"></section>
-					<section class="tab-pane fade" id="mail"></section>
-				</section>
+				<ng-view></ng-view>
 			</section>
 		</section>
 	</article>
