--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top topbar" ng-controller="navController">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand no-drag" href="#">Electron</a>
+				<a class="navbar-brand no-drag" href="#">...</a>
 			</div>
 			<div class="navbar-collapse collapse" id="navbar-collapse-main">
 				<ul class="nav navbar-nav navbar-right no-drag">
