--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="app">
 <head>
 	<meta charset="utf-8">
-	<title>Hello World</title>
+	<title>PharmaGo</title>
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/css/style.css" rel="stylesheet">
   <script src="./assets/js/jquery-1.8.3.min.js"></script>
@@ -34,6 +34,9 @@
 				</li>
 				<li>
 					<a data-toggle="tab" data-target='inventory' href="#!inventory"><i class="fa fa-cube"></i></a>
+				</li>
+				<li>
+					<a data-toggle="tab" data-target='config' href="#!config"><i class="fa fa-gears"></i></a>
 				</li>
 				<li>
 					<a data-toggle="tab" data-target='feedback' href="#!feedback"><i class="fa fa-envelope"></i></a>
