--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en" ng-app="app">
 <head>
 	<meta charset="utf-8">
-	<title>PharmaGo</title>
+	<title>PharmaPos</title>
   <link href="./assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="./assets/css/style.css" rel="stylesheet">
-  <script src="./assets/js/jquery-1.8.3.min.js"></script>
+	<script src="./assets/js/jquery-1.8.3.min.js"></script>
+  <script src="./assets/js/chart.min.js"></script>
   <script src="./assets/js/angular.min.js"></script>
   <script src="./assets/js/angular-route.min.js"></script>
 	<script src="./assets/js/Angucomplete.js"></script>
@@ -15,7 +16,7 @@
 	<nav class="navbar navbar-default navbar-fixed-top topbar" ng-controller="navController">
 		<div class="container-fluid">
 			<div class="navbar-header">
-				<a class="navbar-brand no-drag" href="#">...</a>
+				<a class="navbar-brand no-drag" href="#">PharmaPos</a>
 			</div>
 			<div class="navbar-collapse collapse" id="navbar-collapse-main">
 				<ul class="nav navbar-nav navbar-right no-drag">
